# bayesian-fwi-flow-prior

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  pyproject.toml
notebooks/: 00-Figure-Slides.ipynb  01-Prior-Models.ipynb  02-Prior-VAE-Training.ipynb  03-Prior-VAE-Validation.ipynb  04-FWI-Test.ipynb  07-HMC-FWI-Results-Survey.ipynb  08-HMC-FWI-Results-Waveforms.ipynb  09-HMC-FWI-Results-Sensitivity.ipynb  10-HMC-FWI-Workflow.ipynb  README.md
notebooks/revision/: R02-Prior-VAE-Training.ipynb  R02-Prior-VAE-Validation.ipynb  R04-HMC-FWI-Results-Sparse.ipynb  R06-FWI-REG.ipynb
scripts/: 05_run_fwi_dense.sh  05_run_fwi_sensitivity.sh  05_run_fwi_survey.sh  05_run_fwi_test.sh  R01_run_fwi_dense_noise.sh  R04_run_fwi_dense.sh  R04_run_fwi_survey.sh  R05_run_fwi_vae.sh  R06_run_fwi_reg.sh
seisfwi/: README.md  pyproject.toml
seisfwi/seisfwi/: __init__.py  defaults.py
seisfwi/seisfwi/model/: __init__.py  acoustic.py  base.py  rockphysics.py
seisfwi/seisfwi/optimizer/: __init__.py
seisfwi/seisfwi/optimizer/seiscope/: optimizer.py
seisfwi/seisfwi/problem/: __init__.py  deterministic.py  misfits.py  priors.py  probabilistic.py
seisfwi/seisfwi/propagator/: __init__.py  acoustic.py  hicks.py
seisfwi/seisfwi/signal/: __init__.py  filter.py  noise.py  norm.py
seisfwi/seisfwi/survey/: __init__.py  data.py  receiver.py  source.py  survey.py
seisfwi/seisfwi/utils/: __init__.py  misc.py  operators.py  plot.py  wavelet.py
src/: FWI_REG.py  FWI_VAE.py  HMC_FWI_VAE.py  HMC_FWI_VAE_DD.py
src/utils/: __init__.py  project_plots.py  project_utils.py  rock.py  vae.py  vae_utils.py
